# FunRootAna

./: CMakeLists.txt  LICENSE  README.md  index.md  makefile
FunRootAna/: Access.h  BS_thread_pool_light.hpp  CSVAccess.h  Conf.h  EagerFunctionalVector.h  HIST.h  LazyFunctionalVector.h  ROOTTreeAccess.h  Selector.h  Weights.h  assure.h  filling.h  futils.h  parallel.h
examples/: example_analysis.cpp  generateTree.C
fwksrc/: Access.cpp  Conf.cpp  HIST.cpp  Weights.cpp  assure.cpp
include/: Access.h  Conf.h  EagerFunctionalVector.h  HIST.h  LazyFunctionalVector.h  Weights.h  WrappedSequenceContainer.h  assure.h  filling.h  futils.h
src/: Access.cpp  Conf.cpp  HIST.cpp  ROOTTreeAccess.cpp  assure.cpp
tests/: Testing.h  benchmark.cpp  test_conf.cpp  test_csv.cpp  test_efv.cpp  test_fv.cpp  test_fv_objects.cpp  test_hist.cpp  test_lfv.cpp  test_weight.cpp  test_wsc.cpp
